--- a/src/main/resources/org/example/projet_phn_fx/index-magasin-electro.fxml
+++ b/src/main/resources/org/example/projet_phn_fx/index-magasin-electro.fxml
@@ -1,81 +1,130 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
+<?import javafx.collections.FXCollections?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="591.0" prefWidth="758.0" style="-fx-background-color: #FAD59A;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" spacing="10.0" style="-fx-background-color: #FAD59A;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.projet_phn_fx.GestionProduitController">
+
    <children>
-      <HBox prefHeight="69.0" prefWidth="757.0">
-         <children>
-            <Label alignment="CENTER" prefHeight="81.0" prefWidth="765.0" text="Bienvenue dans votre application de gestion" textAlignment="CENTER">
-               <font>
-                  <Font name="Leelawadee UI" size="33.0" />
-               </font>
-            </Label>
-         </children>
+      <!-- Titre -->
+      <Label alignment="CENTER" prefWidth="800.0" style="-fx-font-size: 28px; -fx-font-weight: bold; -fx-text-fill: #2E4053;" text="Gestion de Produits Électroniques">
+         <padding>
+            <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+         </padding>
+         <font>
+            <Font name="Arial" size="28.0" />
+         </font>
+      </Label>
+
+      <!-- Type de produits -->
+      <HBox alignment="CENTER_LEFT" spacing="10.0">
+         <padding>
+            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+         </padding>
+         <Label prefWidth="150.0" style="-fx-font-weight: bold;" text="Type de produit:" />
+         <ChoiceBox fx:id="typeProduit" prefWidth="200.0" style="-fx-font-size: 14;">
+            <items>
+               <FXCollections fx:factory="observableArrayList">
+                  <String fx:value="Téléphone" />
+                  <String fx:value="Ordinateur" />
+                  <String fx:value="Accessoires" />
+               </FXCollections>
+            </items>
+         </ChoiceBox>
       </HBox>
-      <HBox prefHeight="38.0" prefWidth="758.0">
-         <children>
-            <Label text="Type de produits" />
-            <ChoiceBox prefWidth="150.0" />
-         </children>
+
+      <!-- Nom du produit -->
+      <HBox alignment="CENTER_LEFT" spacing="10.0">
+         <padding>
+            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+         </padding>
+         <Label prefWidth="150.0" style="-fx-font-weight: bold;" text="Nom du produit:" />
+         <TextField fx:id="nomProduit" prefWidth="500.0" style="-fx-font-size: 14;" />
       </HBox>
-      <HBox prefHeight="46.0" prefWidth="758.0">
-         <children>
-            <Label alignment="CENTER" prefHeight="35.0" prefWidth="171.0" style="-fx-background-color: F0F1C5;" text="Nom du produit" />
-            <TextField />
-         </children>
+
+      <!-- Fabricant -->
+      <HBox alignment="CENTER_LEFT" spacing="10.0">
+         <padding>
+            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+         </padding>
+         <Label prefWidth="150.0" style="-fx-font-weight: bold;" text="Fabricant:" />
+         <TextField fx:id="fabricant" prefWidth="500.0" style="-fx-font-size: 14;" />
       </HBox>
-      <HBox prefHeight="61.0" prefWidth="758.0">
-         <children>
-            <Label alignment="CENTER" prefHeight="35.0" prefWidth="171.0" style="-fx-background-color: F0F1C5;" text="Fabricant" />
-            <TextField />
-         </children>
+
+      <!-- Prix et CPU -->
+      <HBox alignment="CENTER_LEFT" prefHeight="5.0" prefWidth="800.0" spacing="10.0">
+         <padding>
+            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+         </padding>
+         <Label prefWidth="150.0" style="-fx-font-weight: bold;" text="Prix (FC):" />
+         <TextField fx:id="prix" prefWidth="100.0" style="-fx-font-size: 14;" />
+         <Separator orientation="VERTICAL" prefHeight="30.0" />
+         <Label prefWidth="100.0" style="-fx-font-weight: bold;" text="CPU:" />
+         <TextField fx:id="cpu" prefWidth="150.0" style="-fx-font-size: 14;" />
       </HBox>
-      <HBox prefHeight="46.0" prefWidth="758.0">
-         <children>
-            <Label alignment="CENTER" prefHeight="35.0" prefWidth="171.0" style="-fx-background-color: F0F1C5;" text="Prix" />
-            <TextField />
-            <Separator orientation="VERTICAL" prefHeight="200.0" />
-            <Label alignment="CENTER" prefHeight="35.0" prefWidth="171.0" style="-fx-background-color: F0F1C5;" text="CPU" />
-            <TextField />
-         </children>
+
+      <!-- RAM, ROM et OS -->
+      <HBox alignment="CENTER_LEFT" spacing="10.0">
+         <padding>
+            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+         </padding>
+         <Label prefWidth="80.0" style="-fx-font-weight: bold;" text="RAM:" />
+         <TextField fx:id="ram" prefWidth="100.0" style="-fx-font-size: 14;" />
+         <Separator orientation="VERTICAL" prefHeight="30.0" />
+         <Label prefWidth="80.0" style="-fx-font-weight: bold;" text="ROM:" />
+         <TextField fx:id="rom" prefWidth="100.0" style="-fx-font-size: 14;" />
+         <Separator orientation="VERTICAL" prefHeight="30.0" />
+         <Label prefWidth="80.0" style="-fx-font-weight: bold;" text="OS:" />
+         <TextField fx:id="os" prefWidth="150.0" style="-fx-font-size: 14;" />
       </HBox>
-      <HBox prefHeight="40.0" prefWidth="758.0">
-         <children>
-            <Label alignment="CENTER" prefHeight="35.0" prefWidth="171.0" style="-fx-background-color: F0F1C5;" text="Type d'accessoires" />
-            <TextField />
-            <Separator orientation="VERTICAL" prefHeight="200.0" />
-            <Label alignment="CENTER" prefHeight="35.0" prefWidth="171.0" style="-fx-background-color: F0F1C5;" text="Quantité à ajouter" />
-            <TextField />
-         </children>
+
+      <!-- Quantité et Type d'accessoire -->
+      <HBox alignment="CENTER_LEFT" prefHeight="20.0" prefWidth="800.0" spacing="10.0">
+         <padding>
+            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+         </padding>
+         <Label prefWidth="150.0" style="-fx-font-weight: bold;" text="Quantité:" />
+         <TextField fx:id="quantite" prefWidth="100.0" style="-fx-font-size: 14;" />
+         <Label fx:id="labelTypeAccessoire" prefWidth="150.0" style="-fx-font-weight: bold;" text="Type d'accessoire:" visible="false" />
+         <TextField fx:id="typeAccessoire" prefWidth="150.0" style="-fx-font-size: 14;" visible="false" />
       </HBox>
-      <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
-         <children>
-            <Label alignment="CENTER" prefHeight="35.0" prefWidth="67.0" style="-fx-background-color: F0F1C5;" text="Ram" />
-            <TextField prefHeight="25.0" prefWidth="86.0" />
-            <Separator orientation="VERTICAL" prefHeight="200.0" />
-            <Label alignment="CENTER" prefHeight="35.0" prefWidth="104.0" style="-fx-background-color: F0F1C5;" text="Rom" />
-            <TextField prefHeight="25.0" prefWidth="96.0" />
-            <Separator orientation="VERTICAL" prefHeight="200.0" />
-            <Label alignment="CENTER" prefHeight="35.0" prefWidth="67.0" style="-fx-background-color: F0F1C5;" text="OS" />
-            <TextField prefHeight="25.0" prefWidth="96.0" />
-         </children>
+
+      <!-- Boutons -->
+      <HBox alignment="CENTER" prefHeight="14.0" prefWidth="800.0" spacing="20.0">
+         <padding>
+            <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+         </padding>
+         <Button fx:id="addProduct" prefHeight="35.0" prefWidth="120.0" style="-fx-background-color: #90C67C; -fx-font-weight: bold; -fx-text-fill: white; -fx-font-size: 14;" text="Ajouter" />
+         <Button fx:id="dropProduct" prefHeight="35.0" prefWidth="120.0" style="-fx-background-color: #F7374F; -fx-font-weight: bold; -fx-text-fill: white; -fx-font-size: 14;" text="Supprimer" />
+         <Button fx:id="updateProduct" prefHeight="35.0" prefWidth="120.0" style="-fx-background-color: #0D92F4; -fx-font-weight: bold; -fx-text-fill: white; -fx-font-size: 14;" text="Modifier" />
+         <Button fx:id="clearForm" prefHeight="35.0" prefWidth="120.0" style="-fx-background-color: #E0E0E0; -fx-font-weight: bold; -fx-font-size: 14;" text="Vider" />
       </HBox>
-      <HBox alignment="CENTER" prefHeight="57.0" prefWidth="757.0">
-         <children>
-            <Button id="addProduct" contentDisplay="CENTER" mnemonicParsing="false" prefHeight="43.0" prefWidth="111.0" style="-fx-background-color: #90C67C;" text="Ajouter le produit" />
-            <Separator orientation="VERTICAL" prefHeight="56.0" prefWidth="28.0" />
-            <Button id="dropProduct" mnemonicParsing="false" prefHeight="43.0" prefWidth="113.0" style="-fx-background-color: #F7374F;" text="Retirer un produit" />
-            <Separator orientation="VERTICAL" prefHeight="77.0" prefWidth="19.0" />
-            <Button id="updateProduct" mnemonicParsing="false" prefHeight="43.0" prefWidth="126.0" style="-fx-background-color: #0D92F4;" text="Modifier un produit" />
-         </children>
-      </HBox>
+
+      <!-- TableView -->
+      <TableView fx:id="produitsTable" prefHeight="250.0" prefWidth="780.0" style="-fx-font-size: 14;">
+         <columns>
+            <TableColumn fx:id="idCol" prefWidth="50.0" style="-fx-alignment: CENTER;" text="ID" />
+            <TableColumn fx:id="nomCol" prefWidth="150.0" text="Nom" />
+            <TableColumn fx:id="typeCol" prefWidth="100.0" text="Type" />
+            <TableColumn fx:id="fabricantCol" prefWidth="120.0" text="Fabricant" />
+            <TableColumn fx:id="prixCol" prefWidth="80.0" style="-fx-alignment: CENTER_RIGHT;" text="Prix (€)" />
+            <TableColumn fx:id="quantiteCol" prefWidth="70.0" style="-fx-alignment: CENTER;" text="Stock" />
+            <TableColumn fx:id="cpuCol" prefWidth="120.0" text="CPU" />
+            <TableColumn fx:id="ramCol" prefWidth="80.0" style="-fx-alignment: CENTER;" text="RAM" />
+            <TableColumn fx:id="romCol" prefWidth="80.0" style="-fx-alignment: CENTER;" text="ROM" />
+            <TableColumn fx:id="osCol" prefWidth="120.0" text="OS" />
+         </columns>
+      </TableView>
    </children>
 </VBox>
