Ajouts des dernières fonctionnalités

--- a/src/main/resources/org/example/projet_phn_fx/index-magasin-electro.fxml
+++ b/src/main/resources/org/example/projet_phn_fx/index-magasin-electro.fxml
@@ -105,14 +105,14 @@
          <padding>
             <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
          </padding>
-         <Button fx:id="addProduct" prefHeight="35.0" prefWidth="120.0" style="-fx-background-color: #90C67C; -fx-font-weight: bold; -fx-text-fill: white; -fx-font-size: 14;" text="Ajouter" />
-         <Button fx:id="dropProduct" prefHeight="35.0" prefWidth="120.0" style="-fx-background-color: #F7374F; -fx-font-weight: bold; -fx-text-fill: white; -fx-font-size: 14;" text="Supprimer" />
-         <Button fx:id="updateProduct" prefHeight="35.0" prefWidth="120.0" style="-fx-background-color: #0D92F4; -fx-font-weight: bold; -fx-text-fill: white; -fx-font-size: 14;" text="Modifier" />
-         <Button fx:id="clearForm" prefHeight="35.0" prefWidth="120.0" style="-fx-background-color: #E0E0E0; -fx-font-weight: bold; -fx-font-size: 14;" text="Vider" />
+         <Button fx:id="addButton" onAction="#handleAddProduct" prefHeight="35.0" prefWidth="120.0" style="-fx-background-color: #90C67C; -fx-font-weight: bold; -fx-text-fill: white; -fx-font-size: 14;" text="Ajouter" />
+         <Button fx:id="deleteButton" onAction="#handleDeleteProduct" prefHeight="35.0" prefWidth="120.0" style="-fx-background-color: #F7374F; -fx-font-weight: bold; -fx-text-fill: white; -fx-font-size: 14;" text="Supprimer" />
+         <Button fx:id="updateButton" onAction="#handleUpdateProduct" prefHeight="35.0" prefWidth="120.0" style="-fx-background-color: #0D92F4; -fx-font-weight: bold; -fx-text-fill: white; -fx-font-size: 14;" text="Modifier" />
+         <Button fx:id="clearButton" onAction="#handleClearForm" prefHeight="35.0" prefWidth="120.0" style="-fx-background-color: #E0E0E0; -fx-font-weight: bold; -fx-font-size: 14;" text="Vider" />
       </HBox>
 
       <!-- TableView -->
-      <TableView fx:id="produitsTable" prefHeight="250.0" prefWidth="780.0" style="-fx-font-size: 14;">
+      <TableView fx:id="produitsTable" prefHeight="250.0" prefWidth="780.0" style="-fx-text-fill: black; -fx-font-size: 14px;">
          <columns>
             <TableColumn fx:id="idCol" prefWidth="50.0" style="-fx-alignment: CENTER;" text="ID" />
             <TableColumn fx:id="nomCol" prefWidth="150.0" text="Nom" />
